--- a/AutoLotModel/App.config
+++ b/AutoLotModel/App.config
@@ -15,6 +15,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="AutoLotEntitiesModel" connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=C:\Users\Iustin\source\repos\Coltoi_Iustin_Lab5\AutoLot.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="AutoLotEntitiesModel" connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=C:\Users\Iustin\source\repos\Coltoi_Iustin_Tot_Lab5\Coltoi_Iustin_Lab5\AutoLot.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
