--- a/Coltoi_Iustin_Lab5/App.config
+++ b/Coltoi_Iustin_Lab5/App.config
@@ -8,7 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <connectionStrings>
-    <add name="AutoLotEntitiesModel" connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=C:\Users\Iustin\source\repos\Coltoi_Iustin_Lab5\AutoLot.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="AutoLotEntitiesModel" connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=C:\Users\Iustin\source\repos\Coltoi_Iustin_Tot_Lab5\Coltoi_Iustin_Lab5\AutoLot.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
